--- a/menu/menu.html
+++ b/menu/menu.html
@@ -15,21 +15,21 @@
                 <option class="list" value="malt">I PIATTI DEL MALT</option> 
                 <option class="list" value="toast">TOAST AMERIGANI</option> 
                 <option class="list" value="hamburger">HAMBURGERS</option> 
-                <option class="list" value="crostini">PINSE ROMANEi</option> 
+                <option class="list" value="piadine">PIADINE</option>
+                <option class="list" value="crostini">PINSE ROMANE</option>
+                <option class="list" value="fritti">FRITTI</option> 
                 <option class="list" value="insalate">INSALATE</option> 
-                <option class="list" value="bibite&virgins">Bibite e virgins</option> 
-                <option class="list" value="birrespina">Birre alla spina</option> 
-                <option class="list" value="inbottiglia">Birre in bottiglia</option>
-                <option class="list" value="sommergibile">Sommergibile (piccola/media)</option> 
-                <option class="list" value="vini">Vini</option> 
-                <option class="list" value="cocktail">Cocktail</option> 
+                <option class="list" value="bibite&virgins">VIRGINS</option> 
+                <option class="list" value="birrespina">BIRRE ALLA SPINA</option> 
+                <option class="list" value="inbottiglia">BIRRE IN BOTTIGLIA</option>
+                <option class="list" value="sommergibile">SOMMERGIBILI (piccola/media)</option> 
+                <option class="list" value="vini">VINI</option> 
+                <option class="list" value="cocktail">COCKTAILS</option> 
                 <option class="list" value="pestati">Pestati con zucchero e lime</option> 
-                <option class="list" value="cicchetti">Cicchetti</option> 
-                <option class="list" value="digestivi">Digestivi</option> 
-                <option class="list" value="coffeshop">Coffe shop</option> 
-                <option class="list" value="piadine">PIADINE</option> 
-               <!-- <option class="list" value="crescente">Crescente farcite</option> -->
-                <option class="list" value="fritti">I fritti e non solo</option> 
+                <option class="list" value="cicchetti">SHOTS</option> 
+                <option class="list" value="digestivi">DIGESTIVI</option> 
+                <option class="list" value="coffeshop">COFFEE SHOP</option> 
+                <!-- <option class="list" value="crescente">Crescente farcite</option> -->
             </select>
             <div class="product">
 
@@ -632,7 +632,12 @@
                 
                  <!-- Digestivi -->
                 <div class="itemBox" data-item="digestivi">
-                    <h3>Limoncello/Samnbuca</h3>
+                    <h3>Limoncello</h3>
+                    <p></p>
+                    <p>Prezzo: &euro;4.00</p>
+                </div>
+                   <div class="itemBox" data-item="digestivi">
+                    <h3>Samnbuca</h3>
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
@@ -674,36 +679,36 @@
 
                 <!-- Coffe shop -->
                 <div class="itemBox" data-item="coffeshop">
-                    <h3>Caff&egrave; espresso/corretto</h3>
+                    <h3>Caff&egrave; Espresso/Corretto</h3>
                     <p></p>
                     <p>Prezzo: &euro;1.50/&euro;2.00</p>
                 </div>
-                <div class="itemBox" data-item="coffeshop">
+                <!--<div class="itemBox" data-item="coffeshop">
                     <h3>Montebianco</h3>
                     <p>Caff&egrave;/panna montata/cacao</p>
                     <p>Prezzo: &euro;3.00</p>
-                </div>
+                </div>-->
                 <div class="itemBox" data-item="coffeshop">
-                    <h3>Caff&egrave; shakerato</h3>
+                    <h3>Caff&egrave; Shakerato</h3>
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
-                <div class="itemBox" data-item="coffeshop">
+               <!-- <div class="itemBox" data-item="coffeshop">
                     <h3>Caff&egrave; shakerato e Baileys</h3>
                     <p>Caff&egrave;,panna montata,cacao</p>
                     <p>Prezzo: &euro;6.00</p>
-                </div>
+                </div>-->
                 <div class="itemBox" data-item="coffeshop">
-                    <h3>The caldo</h3>
+                    <h3>The Caldo</h3>
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
                 <div class="itemBox" data-item="coffeshop">
-                    <h3>Tisane/camomilla</h3>
+                    <h3>Tisane/Camomilla</h3>
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
                 </div>
-                <div class="itemBox" data-item="coffeshop">
+               <!-- <div class="itemBox" data-item="coffeshop">
                     <h3>Irish coffe</h3>
                     <p>Caff&egrave; espresso, irish whisky, zucchero, panna</p>
                     <p>Prezzo: &euro;7.00</p>
@@ -712,7 +717,7 @@
                     <h3>Bailyes coffe</h3>
                     <p>Caff&egrave; espresso, Bailyes, zucchero, panna</p>
                     <p>Prezzo: &euro;7.00</p>
-                </div>
+                </div>-->
                 
                 <!-- PIADINE -->
                 <div class="itemBox" data-item="piadine">
