--- a/menu/menu.html
+++ b/menu/menu.html
@@ -22,7 +22,7 @@
                 <option class="list" value="bibite&virgins">VIRGINS</option> 
                 <option class="list" value="birrespina">BIRRE ALLA SPINA</option> 
                 <option class="list" value="inbottiglia">BIRRE IN BOTTIGLIA</option>
-                <option class="list" value="sommergibile">SOMMERGIBILI (piccola/media)</option> 
+                <option class="list" value="sommergibile">MIX BEER (piccola/media)</option> 
                 <option class="list" value="vini">VINI</option> 
                 <option class="list" value="cocktail">COCKTAILS</option> 
                 <option class="list" value="pestati">Pestati con zucchero e lime</option> 
@@ -369,22 +369,22 @@
                 <div class="itemBox" data-item="sommergibile">
                     <h3>Sandy Line</h3>
                     <p>Acqua tonica e birra chiara</p>
-                    <p>Prezzo: &euro;3.50/&euro;5.00</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.00</p>
                 </div>
                 <div class="itemBox" data-item="sommergibile">
                     <h3>Radler</h3>
                     <p>Lemon e birra chiara</p>
-                    <p>Prezzo: &euro;3.50/&euro;5.00</p>
-                </div>
-                <div class="itemBox" data-item="sommergibile">
-                    <h3>Snake bite</h3>
-                    <p>Sidro e birra chiara</p>
                     <p>Prezzo: &euro;4.00/&euro;6.00</p>
                 </div>
+               <!-- <div class="itemBox" data-item="sommergibile">
+                    <h3>Snake bite</h3>
+                    <p>Sidro e birra chiara</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50</p>
+                </div> -->
                 <div class="itemBox" data-item="sommergibile">
                     <h3>Birra verde</h3>
                     <p>Ricetta segreta</p>
-                    <p>Prezzo: &euro;4.00/&euro;6.00</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50</p>
                 </div>
                 <div class="itemBox" data-item="sommergibile">
                     <h3>Mexicano</h3>
@@ -404,7 +404,7 @@
                 <div class="itemBox" data-item="sommergibile">
                     <h3>Cica</h3>
                     <p>Limoncello e weiss</p>
-                    <p>Prezzo: &euro;4.00/&euro;6.00</p>
+                    <p>Prezzo: &euro;4.00/&euro;6.50</p>
                 </div>
                 
                 <!-- Vini -->
