--- a/menu/menu.html
+++ b/menu/menu.html
@@ -25,7 +25,7 @@
                 <option class="list" value="sommergibile">MIX BEER (piccola/media)</option> 
                 <option class="list" value="vini">VINI</option> 
                 <option class="list" value="cocktail">COCKTAILS</option> 
-                <option class="list" value="pestati">Pestati con zucchero e lime</option> 
+                <option class="list" value="pestati">PESTATI</option> 
                 <option class="list" value="cicchetti">SHOTS</option> 
                 <option class="list" value="digestivi">DIGESTIVI</option> 
                 <option class="list" value="coffeshop">COFFEE SHOP</option> 
