--- a/menu/menu.html
+++ b/menu/menu.html
@@ -548,15 +548,15 @@
                     <p>Prezzo: &euro;7.00</p>
                 </div>
                 <div class="itemBox" data-item="pestati">
-                    <h3>Black mojito</h3>
+                    <h3>Black Mojito</h3>
                     <p>menta, rum, liquirizia</p>
                     <p>Prezzo: &euro;7.00</p>
                 </div>
-                <div class="itemBox" data-item="pestati">
+               <!-- <div class="itemBox" data-item="pestati">
                     <h3>Caipirinha</h3>
                     <p>Cacha&ccedil;a</p>
                     <p>Prezzo: &euro;7.00</p>
-                </div>
+                </div>-->
                 <div class="itemBox" data-item="pestati">
                     <h3>Caipiroska</h3>
                     <p>Vodka (su richiesta aggiunta di fragola/papaya)</p>
