--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
 
         <section class="home" id="home">
-            <h1>UN RISTORANTE UNICO PER CHI AMA I SAPORI E L'ATMOSFERA</h1>
+            <h1>ED ECCOTI FINALMENTE DOVE LA BIRRA UNISCE E LA BALOTTA REGNA</h1>
             <a href="/menu/menu.html">Scopri il men&ugrave;</a>
         </section>
 
@@ -39,7 +39,7 @@
 
 		Che tu stia cercando una serata con gli amici, un evento speciale o semplicemente un angolo dove rilassarti con una pinta e un sorriso, qui sei a casa. La nostra cucina propone piatti gustosi preparati con ingredienti freschi, perfetti per accompagnare una selezione di birre e drink scelti con cura.
 
-		Il nostro pub &egrave; il punto d'incontro per chi ama la compagnia, le risate e la magia di sentirsi in famiglia.
+		Il nostro pub &egrave; il punto d'incontro per chi ama la compagnia, le risate e fare balotte.
                 </p>
             </div>
         </section>
