--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="title">
                 <h1>Servizi</h1>
             </div>
-            <div class="content">
+          <!--  <div class="content">
                 <div class="s" id="servizio1">
                     <div class="immagineS"></div>
                     <div class="titoloS">
@@ -60,7 +60,7 @@
                     <div class="ctaS">
                         <a href="./shop/shop.html">Scopri di pi&ugrave;</a>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="s" id="servizio2">
                     <div class="immagineS"></div>
