--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="s" id="servizio1">
                     <div class="immagineS"></div>
                     <div class="titoloS">
-                       <!-- <h2>SHOP</h2>
+                        <h2>SHOP</h2>
                     </div> -->
                     <div class="testoS">
                         <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
