--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="immagineS"></div>
                     <div class="titoloS">
                         <h2>SHOP</h2>
-                    </div> -->
+                    </div>
                     <div class="testoS">
                         <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
                     </div>
