--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <h2>SHOP</h2>
                     </div>
                     <div class="testoS">
-                        <p>Lorem Ipsum &egrave; un testo segnaposto utilizzato nel settore della tipografia e della stampa. Lorem Ipsum &egrave; considerato il testo segnaposto standard sin dal sedicesimo secolo.</p>
+                        <p>Porta a casa l'atmosfera del nostro pub con il nostro merchandising esclusivo: t-shirt, cappellini e gadget che raccontano la nostra storia. Scopri la collezione e mostra il tuo stile unico!</p>
                     </div>
                     <div class="ctaS">
                         <a href="./shop/shop.html">Scopri di pi&ugrave;</a>
@@ -68,7 +68,7 @@
                         <h2>MEN&Ugrave;</h2>
                     </div>
                     <div class="testoS">
-                        <p>Birre artiginali, cocktail e piatti scelti con cura, fatti tentare dalla nostra scelta</p>
+                        <p>Scopri il piacere di birre artigianali, cocktail unici e piatti preparati con passione: un invito a lasciarsi tentare.</p>
                     </div>
                     <div class="ctaS">
                         <a href="./menu/menu.html">Scopri di pi&ugrave;</a>
@@ -81,7 +81,7 @@
                         <h2>EVENTI</h2>
                     </div>
                     <div class="testoS">
-                        <p>Nel cuore pulsante di Bologna, il nostro pub è il punto di ritrovo per serate indimenticabili: dalle jam session spontanee ai DJ set che fanno vibrare le pareti, passando per serate a tema che celebrano la cultura e la musica locale. Ogni settimana, proponiamo eventi che uniscono buona musica, ottimo cibo e birre selezionate, creando l'atmosfera perfetta per divertirsi in compagnia. Consulta il nostro calendario per non perdere il prossimo appuntamento!</p>
+                        <p>Ogni settimana, proponiamo eventi che uniscono buona musica, serate karaoke e Cervellone, creando l'atmosfera perfetta per divertirsi in compagnia. Consulta il nostro calendario per non perdere il prossimo appuntamento!</p>
                     </div>
                     <div class="ctaS">
                         <a href="./eventi/eventi.html">Scopri di pi&ugrave;</a>
