--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   </button>
                   <div class="pannel">
                     <p>
-                      Siamo aperti tutti i giorni dalle 18:00 alle 1:00.<br>
+                      <br>
                       LUN-GIO: 18:30-01:00<br>
                       VEN-SAB: 18:30-02:00<br>
                       Domenica Relax
@@ -118,11 +118,7 @@
                   </button>
                   <div class="pannel">
                     <p>
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-                      saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-                      ullam, iure eligendi harum eaque hic corporis debitis porro
-                      consectetur voluptate rem officiis architecto.
-                    </p>
+                      Certo! chiamaci al 051 049 2408 oppore in DM sulla nostra pagina Instagram  <a href="https://www.instagram.com/malt_and_hops_pub_bologna/" target="_blank">
                   </div>
                 </div>
           
