--- a/menu/menu.html
+++ b/menu/menu.html
@@ -29,6 +29,7 @@
                 <option class="list" value="cicchetti">SHOTS</option> 
                 <option class="list" value="digestivi">DIGESTIVI</option> 
                 <option class="list" value="coffeshop">COFFEE SHOP</option> 
+                <option class="list" value="malt">Lista allergeni</option> 
                 <!-- <option class="list" value="crescente">Crescente farcite</option> -->
             </select>
             <div class="product">
