--- a/menu/menu.html
+++ b/menu/menu.html
@@ -29,7 +29,7 @@
                 <option class="list" value="cicchetti">SHOTS</option> 
                 <option class="list" value="digestivi">DIGESTIVI</option> 
                 <option class="list" value="coffeshop">COFFEE SHOP</option> 
-                <option class="list" value="malt">Lista allergeni</option> 
+                <option class="list" value="allergeni">Lista allergeni</option> 
                 <!-- <option class="list" value="crescente">Crescente farcite</option> -->
             </select>
             <div class="product">
@@ -868,6 +868,11 @@
                     <h3>Nachos con salsa piccante (senza glutine)</h3>
                     <p></p>
                     <p>Prezzo: &euro;4.00</p>
+                </div>
+                     <div class="itemBox" data-item="allergeni">
+                    <h3>Fuori Menù (primi e secondi)</h3>
+                    <p>Cambiano periodicamente. Chiedere allo staff.</p>
+                    <p>Prezzo: Da &euro;9.00 a &euro;22.00</p>
                 </div>
             </div>
         </section>
