--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   </button>
                   <div class="pannel">
                     <p>
-                      Certo! chiamaci al 051 049 2408 oppore in DM sulla nostra pagina Instagram  <a href="https://www.instagram.com/malt_and_hops_pub_bologna/" target="_blank"></a>
+                      Certo! chiamaci al 051 049 2408 oppore in DM sulla nostra pagina <a href="https://www.instagram.com/malt_and_hops_pub_bologna/" target="_blank">Instagram</a>
                   </div>
                 </div>
           
