--- a/menu/menu.html
+++ b/menu/menu.html
@@ -36,12 +36,12 @@
 
                 <!-- I PIATTI DEL MALT -->
                 <div class="itemBox" data-item="malt">
-                    <h3>Fuori Menù (primi e secondi)</h3>
+                    <h3>Fuori Men&u (primi e secondi)</h3>
                     <p>Cambiano periodicamente. Chiedere allo staff.</p>
                     <p>Prezzo: Da &euro;9.00 a &euro;22.00</p>
                 </div>
                 <div class="itemBox" data-item="malt">
-                    <h3>Cotoletta all Bolognese</h3>
+                    <h3>Cotoletta alla Bolognese</h3>
                     <p>Contorno di patate al forno</p>
                     <p>Prezzo: &euro;18.00</p>
                 </div>
