--- a/menu/menu.html
+++ b/menu/menu.html
@@ -36,7 +36,7 @@
 
                 <!-- I PIATTI DEL MALT -->
                 <div class="itemBox" data-item="malt">
-                    <h3>Fuori Men&u (primi e secondi)</h3>
+                    <h3>Fuori Men&ugrave (primi e secondi)</h3>
                     <p>Cambiano periodicamente. Chiedere allo staff.</p>
                     <p>Prezzo: Da &euro;9.00 a &euro;22.00</p>
                 </div>
