--- a/index.html
+++ b/index.html
@@ -129,10 +129,8 @@
                   </button>
                   <div class="pannel">
                     <p>
-                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis
-                      saepe molestiae distinctio asperiores cupiditate consequuntur dolor
-                      ullam, iure eligendi harum eaque hic corporis debitis porro
-                      consectetur voluptate rem officiis architecto.
+		Sì, organizziamo eventi privati!
+		Compleanni, feste di laurea, cene aziendali e tanto altro: contattaci per creare l’evento su misura per te.
                     </p>
                   </div>
               </div>
