--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                   </button>
                   <div class="pannel">
                     <p>
-		Sì, organizziamo eventi privati!
-		Compleanni, feste di laurea, cene aziendali e tanto altro: contattaci per creare l’evento su misura per te.
+		Sigrave, organizziamo eventi privati!
+		Compleanni, feste di laurea, cene aziendali e tanto altro: contattaci per creare l&aposevento su misura per te.
                     </p>
                   </div>
               </div>
