--- a/eventi/eventi.html
+++ b/eventi/eventi.html
@@ -14,8 +14,8 @@
             <img src="/immagini/bg3.jpg" alt="Evento 1">
             <div class="event-info">
                 <h3>Concerto Live</h3>
-                <p class="event-date">Data: 15 Ottobre 2024</p>
-                <p>Un'esperienza musicale indimenticabile con band locali. Non perderti una serata di grande musica!</p>
+                <p class="event-date"> Mercoledì 11 Gigno </p>
+                <p>Mettiti alla prova con la nostra serata Cervellone! Formate squadre e competete per fantastici premi.</p>
             </div>
         </div>
 
@@ -23,8 +23,8 @@
             <img src="/immagini/bg3.jpg" alt="Evento 2">
             <div class="event-info">
                 <h3>Degustazione di Birra</h3>
-                <p class="event-date">Data: 22 Ottobre 2024</p>
-                <p>Unisciti a noi per una serata di degustazione di birre artigianali. Scopri i nostri nuovi arrivi!</p>
+                <p class="event-date">Giovedì 19 Giugno</p>
+                <p>Concerto da vivo dei Fuori Schema!</p>
             </div>
         </div>
 
@@ -32,8 +32,8 @@
             <img src="/immagini/bg3.jpg" alt="Evento 3">
             <div class="event-info">
                 <h3>Serata Trivia</h3>
-                <p class="event-date">Data: 29 Ottobre 2024</p>
-                <p>Mettiti alla prova con la nostra serata trivia! Formate squadre e competete per fantastici premi.</p>
+                <p class="event-date"> Giovedì 26 Giugno</p>
+                <p>Mettiti alla prova con la nostra serata Cervellone! Formate squadre e competete per fantastici premi.</p>
             </div>
         </div>
     </section>
