--- a/eventi/eventi.html
+++ b/eventi/eventi.html
@@ -13,8 +13,8 @@
         <div class="event-box">
             <img src="/immagini/bg3.jpg" alt="Evento 1">
             <div class="event-info">
-                <h3>Concerto Live</h3>
-                <p class="event-date"> Mercoledì 11 Gigno </p>
+                <h3>CERVELLONE</h3>
+                <p class="event-date"> Mercoled&igrave 11 Giugno </p>
                 <p>Mettiti alla prova con la nostra serata Cervellone! Formate squadre e competete per fantastici premi.</p>
             </div>
         </div>
@@ -22,8 +22,8 @@
         <div class="event-box">
             <img src="/immagini/bg3.jpg" alt="Evento 2">
             <div class="event-info">
-                <h3>Degustazione di Birra</h3>
-                <p class="event-date">Giovedì 19 Giugno</p>
+                <h3>CONCERTO</h3>
+                <p class="event-date">Gioved&igrave 19 Giugno</p>
                 <p>Concerto da vivo dei Fuori Schema!</p>
             </div>
         </div>
@@ -31,8 +31,8 @@
         <div class="event-box">
             <img src="/immagini/bg3.jpg" alt="Evento 3">
             <div class="event-info">
-                <h3>Serata Trivia</h3>
-                <p class="event-date"> Giovedì 26 Giugno</p>
+                <h3>CERVELLONE</h3>
+                <p class="event-date"> Gioved&igrave 26 Giugno</p>
                 <p>Mettiti alla prova con la nostra serata Cervellone! Formate squadre e competete per fantastici premi.</p>
             </div>
         </div>
