--- a/prov.html
+++ b/prov.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Menù PDF - Malt & Hops</title>
+  <meta http-equiv="refresh" content="0; URL='menu/menu-malt-and-hops.pdf.pdf'" />
   <style>
     body {
       background-color: #111;
@@ -26,7 +26,7 @@
 </head>
 <body>
   <h1>Menù Completo</h1>
-  <p>Qui puoi visualizzare o scaricare il nostro menù in PDF.</p>
+  <p>Se il menù non si apre automaticamente, puoi visualizzarlo qui sotto.</p>
   <div class="pdf-container">
     <iframe src="menu/menu-malt-and-hops.pdf.pdf" title="Menù PDF"></iframe>
   </div>
