--- a/menu/menu.html
+++ b/menu/menu.html
@@ -1,1 +1,34 @@
 
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <title>Menù PDF - Malt & Hops</title>
+  <style>
+    body {
+      background-color: #111;
+      color: white;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+
+    .pdf-container {
+      margin-top: 30px;
+    }
+
+    iframe {
+      width: 90%;
+      height: 90vh;
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <h1>Menù Completo</h1>
+  <p>Qui puoi visualizzare o scaricare il nostro menù in PDF.</p>
+  <div class="pdf-container">
+    <iframe src="menu/menu-malt-and-hops.pdf" title="Menù PDF"></iframe>
+  </div>
+</body>
+</html>
