--- a/menu/menu.html
+++ b/menu/menu.html
@@ -28,7 +28,7 @@
   <h1>Menù Completo</h1>
   <p>Qui puoi visualizzare o scaricare il nostro menù in PDF.</p>
   <div class="pdf-container">
-    <iframe src="menu/menu-malt-and-hops.pdf" title="Menù PDF"></iframe>
+    <iframe src="menu/menu-malt-and-hops.pdf.pdf" title="Menù PDF"></iframe>
   </div>
 </body>
 </html>
