--- a/menu/menu.html
+++ b/menu/menu.html
@@ -1,9 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Menù PDF - Malt & Hops</title>
+  <meta http-equiv="refresh" content="0; url=menu_malt_and_hops.pdf">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       background-color: #111;
@@ -12,23 +13,13 @@
       text-align: center;
       padding: 50px;
     }
-
-    .pdf-container {
-      margin-top: 30px;
-    }
-
-    iframe {
-      width: 90%;
-      height: 90vh;
-      border: none;
+    a {
+      color: #00ffcc;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Menù Completo</h1>
-  <p>Qui puoi visualizzare o scaricare il nostro menù in PDF.</p>
-  <div class="pdf-container">
-    <iframe src="menu malt and hops.pdf" title="Menù PDF"></iframe>
-  </div>
+  <p>Se non vieni reindirizzato automaticamente, <a href="menu_malt_and_hops.pdf" target="_blank">clicca qui per aprire il menù</a>.</p>
 </body>
 </html>
