--- a/menu/menu.html
+++ b/menu/menu.html
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <p>Se non vieni reindirizzato automaticamente, <a href="menu_malt_and_hops.pdf" target="_blank">clicca qui per aprire il menù</a>.</p>
+  <p>Se non vieni reindirizzato automaticamente, <a href="menu malt and hops.pdf" target="_blank">clicca qui per aprire il menù</a>.</p>
 </body>
 </html>
