--- a/eventi/eventi.html
+++ b/eventi/eventi.html
@@ -11,7 +11,7 @@
     </div>
     <section class="events-section">
         <div class="event-box">
-            <img src="/immagini/bg3.jpg" alt="Evento 1">
+            <img src="/immagini/Cer_11.05.jpg" alt="Evento 1">
             <div class="event-info">
                 <h3>CERVELLONE</h3>
                 <p class="event-date"> Mercoled&igrave 11 Giugno </p>
