--- a/eventi/eventi.html
+++ b/eventi/eventi.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="event-box">
-            <img src="/immagini/bg3.jpg" alt="Evento 2">
+            <img src="/immagini/Fuori_Shema.jpeg" alt="Evento 2">
             <div class="event-info">
                 <h3>CONCERTO</h3>
                 <p class="event-date">Gioved&igrave 19 Giugno</p>
