--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <h2>EVENTI</h2>
                     </div>
                     <div class="testoS">
-                        <p>Ogni settimana, proponiamo eventi che uniscono buona musica, serate karaoke e Cervellone, creando l'atmosfera perfetta per divertirsi in compagnia. Consulta il nostro calendario per non perdere il prossimo appuntamento!</p>
+                        <p>Ogni mese, proponiamo eventi che uniscono buona musica, serate karaoke e Cervellone, creando l'atmosfera perfetta per divertirsi in compagnia. Consulta il nostro calendario per non perdere il prossimo appuntamento!</p>
                     </div>
                     <div class="ctaS">
                         <a href="./eventi/eventi.html">Scopri di pi&ugrave;</a>
