--- a/prov.html
+++ b/prov.html
@@ -28,7 +28,7 @@
   <h1>Menù Completo</h1>
   <p>Se il menù non si apre automaticamente, puoi visualizzarlo qui sotto.</p>
   <div class="pdf-container">
-    <iframe src="menu/menu-malt-and-hops.pdf.pdf" title="Menù PDF"></iframe>
+    <iframe src="menu/Malt'n_Grill.pdf" title="Menù PDF"></iframe>
   </div>
 </body>
 </html>
