--- a/menu/menu.html
+++ b/menu/menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Menù PDF - Malt & Hops</title>
-  <meta http-equiv="refresh" content="0; url=Maltn_Grill.pdf">
+  <meta http-equiv="refresh" content="0; url=menu_malt_and_hops.pdf">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -20,6 +20,6 @@
   </style>
 </head>
 <body>
-  <p>Se non vieni reindirizzato automaticamente, <a href="Maltn_Grill.pdf" target="_blank">clicca qui per aprire il menù</a>.</p>
+  <p>Se non vieni reindirizzato automaticamente, <a href="menu_malt_and_hops.pdf" target="_blank">clicca qui per aprire il menù</a>.</p>
 </body>
 </html>
