--- a/prov.html
+++ b/prov.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Menù PDF - Malt & Hops</title>
-  <meta http-equiv="refresh" content="0; URL='menu/Maltn_Grill1.pdf'" />
+  <meta http-equiv="refresh" content="0; URL='menu/menu_malt_and_hops.pdf'" />
   <style>
     body {
       background-color: #111;
@@ -28,7 +28,7 @@
   <h1>Menù Completo</h1>
   <p>Se il menù non si apre automaticamente, puoi visualizzarlo qui sotto.</p>
   <div class="pdf-container">
-    <iframe src="menu/Maltn_Grill1.pdf" title="Menù PDF"></iframe>
+    <iframe src="menu/menu_malt_and_hops.pdf" title="Menù PDF"></iframe>
   </div>
 </body>
 </html>
