--- a/prov.html
+++ b/prov.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Menù PDF - Malt & Hops</title>
-  <meta http-equiv="refresh" content="0; URL='menu/menu_malt_and_hops.pdf'" />
+  <meta http-equiv="refresh" content="0; URL='menu/menu-malt-and-hops.pdf.pdf'" />
   <style>
     body {
       background-color: #111;
