--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
 
         <section class="home" id="home">
-            <h1>ED ECCOTI FINALMENTE DOVE LA BIRRA UNISCE E LA BALOTTA REGNA</h1>
+            <h1>ED ECCOTI FINALMENTE DOVE LA BIRRA UNISCE E LA BALOTTA AA REGNA</h1>
             <a href="/menu/menu.html">Scopri il men&ugrave;</a>
         </section>
 
@@ -210,3 +210,4 @@
     </body>
 
 </html>
+
