--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Malt & Hops Pub Bologna</title>
+        <title>Malt & Hops ub Bologna</title>
         <link rel="stylesheet" href="./style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/8d7e2d832c.js" crossorigin="anonymous"></script>
@@ -210,4 +210,5 @@
     </body>
 
 </html>
+
 
