--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Malt & Hops ub Bologna</title>
+        <title>Malt & Hops Pub Bologna</title>
         <link rel="stylesheet" href="./style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/8d7e2d832c.js" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="./menu/menu.html">Men&ugrave;</a></li>
                 <li><a href="./eventi/eventi.html">Eventi</a></li>
-                <li><a href="./shop/shop.html">Shop</a></li>
+                <li><a href="./shop/shop.html">hop</a></li>
                 <li><a href="#chisiamo">Chi Siamo</a></li>
                 <li><a href="#contatti">Contatti</a></li>
             </ul>
@@ -210,5 +210,6 @@
     </body>
 
 </html>
+
 
 
