--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <ul>
                 <li><a href="./menu/menu.html">Men&ugrave;</a></li>
                 <li><a href="./eventi/eventi.html">Eventi</a></li>
-                <li><a href="./shop/shop.html">hop</a></li>
+                <li><a href="./shop/shop.html">Shop</a></li>
                 <li><a href="#chisiamo">Chi Siamo</a></li>
                 <li><a href="#contatti">Contatti</a></li>
             </ul>
         </nav>
 
         <section class="home" id="home">
-            <h1>ED ECCOTI FINALMENTE DOVE LA BIRRA UNISCE E LA BALOTTA AA REGNA</h1>
+            <h1>ED ECCOTI FINALMENTE DOVE LA BIRRA UNISCE E LA BALOTTA REGNA</h1>
             <a href="/menu/menu.html">Scopri il men&ugrave;</a>
         </section>
 
@@ -210,6 +210,7 @@
     </body>
 
 </html>
+
 
 
 
