--- a/eventi/eventi.html
+++ b/eventi/eventi.html
@@ -14,7 +14,7 @@
             <img src="/immagini/Cer_11.05.jpg" alt="Evento 1">
             <div class="event-info">
                 <h3>CERVELLONE</h3>
-                <p class="event-date"> Mercoled&igrave 11 Giugno </p>
+                <p class="event-date"> Mercoled&igrave 8 OTTOBRE </p>
                 <p>Mettiti alla prova con la nostra serata Cervellone! Formate squadre e competete per fantastici premi.</p>
             </div>
         </div>
@@ -22,9 +22,9 @@
         <div class="event-box">
             <img src="/immagini/Fuori_Shema.jpeg" alt="Evento 2">
             <div class="event-info">
-                <h3>CONCERTO</h3>
+                <h3>OKTOBERFEST</h3>
                 <p class="event-date">Gioved&igrave 19 Giugno</p>
-                <p>Concerto da vivo dei Fuori Schema!</p>
+                <p>Dal 10 al 30 ottobre, il nostro pub si trasforma in Baviera: specialità tipiche, fiumi di birra e tanta atmosfera Oktoberfest!</p>
             </div>
         </div>
 
@@ -32,11 +32,22 @@
             <img src="/immagini/bg3.jpg" alt="Evento 3">
             <div class="event-info">
                 <h3>CERVELLONE</h3>
-                <p class="event-date"> Gioved&igrave 26 Giugno</p>
+                <p class="event-date"> Gioved&igrave 29 Ottobre</p>
                 <p>Mettiti alla prova con la nostra serata Cervellone! Formate squadre e competete per fantastici premi.</p>
             </div>
         </div>
+
+         <div class="event-box">
+            <img src="/immagini/Fuori_Shema.jpeg" alt="Evento 2">
+            <div class="event-info">
+                <h3>HALLOWEEN</h3>
+                <p class="event-date">Gioved&igrave 19 Giugno</p>
+                <p>Dal 10 al 30 ottobre, il nostro pub si trasforma in Baviera: specialità tipiche, fiumi di birra e tanta atmosfera Oktoberfest!</p>
+            </div>
+        </div>
+        
     </section>
     <script src="./script.js"></script>
 </body>
 </html>
+
