--- a/eventi/eventi.html
+++ b/eventi/eventi.html
@@ -14,7 +14,7 @@
             <img src="/immagini/Cer_11.05.jpg" alt="Evento 1">
             <div class="event-info">
                 <h3>CERVELLONE</h3>
-                <p class="event-date"> Mercoled&igrave 8 OTTOBRE </p>
+                <p class="event-date"> Mercoled&igrave 8 Ottobre </p>
                 <p>Mettiti alla prova con la nostra serata Cervellone! Formate squadre e competete per fantastici premi.</p>
             </div>
         </div>
@@ -23,8 +23,8 @@
             <img src="/immagini/Fuori_Shema.jpeg" alt="Evento 2">
             <div class="event-info">
                 <h3>OKTOBERFEST</h3>
-                <p class="event-date">Gioved&igrave 19 Giugno</p>
-                <p>Dal 10 al 30 ottobre, il nostro pub si trasforma in Baviera: specialità tipiche, fiumi di birra e tanta atmosfera Oktoberfest!</p>
+                <p class="event-date">Dal 10 al 30 Ottobre</p>
+                <p>Il nostro pub si trasforma in Baviera: specialità tipiche, fiumi di birra e tanta atmosfera Oktoberfest!</p>
             </div>
         </div>
 
@@ -41,8 +41,8 @@
             <img src="/immagini/Fuori_Shema.jpeg" alt="Evento 2">
             <div class="event-info">
                 <h3>HALLOWEEN</h3>
-                <p class="event-date">Gioved&igrave 19 Giugno</p>
-                <p>Dal 10 al 30 ottobre, il nostro pub si trasforma in Baviera: specialità tipiche, fiumi di birra e tanta atmosfera Oktoberfest!</p>
+                <p class="event-date">Venerdd&igrave 31 Ottobre</p>
+                <p>Halloween al pub. Un weekend di cocktail, magia e sapori.</p>
             </div>
         </div>
         
@@ -50,4 +50,5 @@
     <script src="./script.js"></script>
 </body>
 </html>
+
 
