--- a/menu/menu.html
+++ b/menu/menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Menù PDF - Malt & Hops</title>
-  <meta http-equiv="refresh" content="0; url=Menu_All_2026.pdff?v=20251006f">
+  <meta http-equiv="refresh" content="0; url="Menu_All_2026.pdff?v=20251006f">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
