--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <ul>
         <li><a href="./menu/menu.html">Men&ugrave;</a></li>
         <li><a href="./eventi/eventi.html">Eventi</a></li>
-        <li><a href="./shop/shop.html">Shop</a></li>
-        <li><a href="#chisiamo">Chi Siamo</a></li>
+        <li hidden><a href="./shop/shop.html">Shop</a></li>
+        <li hidden><a href="#chisiamo">Chi Siamo</a></li>
         <li><a href="#contatti">Contatti</a></li>
       </ul>
     </nav>
@@ -100,7 +100,7 @@
           </div>
         </div>
 
-        <div class="s" id="servizio2">
+        <div class="s" id="servizio2" hidden>
           <div class="immagineS"></div>
           <div class="titoloS">
             <h2>MEN&Ugrave;</h2>
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="s" id="servizio3">
+        <div class="s" id="servizio3" hidden>
           <div class="immagineS"></div>
           <div class="titoloS">
             <h2>EVENTI</h2>
@@ -263,3 +263,4 @@
     </script>
   </body>
 </html>
+
