--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       </label>
       <ul>
         <li><a href="./menu/menu.html">Men&ugrave;</a></li>
-        <li><a href="./eventi/eventi.html">Eventi</a></li>
-        <li hidden><a href="./shop/shop.html">Shop</a></li>
+        <li style="display:none !important;"><a href="./eventi/eventi.html">Eventi</a></li>
+        <li style="display:none !important;"><a href="./shop/shop.html">Shop</a></li>
         <li hidden><a href="#chisiamo">Chi Siamo</a></li>
         <li><a href="#contatti">Contatti</a></li>
       </ul>
@@ -263,5 +263,6 @@
     </script>
   </body>
 </html>
+
 
 
