--- a/index.html
+++ b/index.html
@@ -216,9 +216,10 @@
                 <span class="text">Instagram</span>
               </a>
             </div>
-           <div class="info-item" style="display:none !important;">
-          <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-          <span class="text">maltandhops@gmail.com</span>
+         <!-- <div class="info-item">
+  <span class="icon"><i class="fa-solid fa-envelope"></i></span>
+  <span class="text">maltandhops@gmail.com</span>
+</div> -->
             </div>  
             </div>
           </div>
@@ -264,6 +265,7 @@
     </script>
   </body>
 </html>
+
 
 
 
