--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
             <div class="pannel">
               <p>
                 <br />
-                LUN-GIO: 18:30-01:00<br />
-                VEN-SAB: 18:30-02:00<br />
-                Domenica Relax
+                DOM-GIO: 18:00-01:00<br />
+                VEN-SAB: 18:00-02:00<br />
+              
               </p>
             </div>
           </div>
@@ -160,7 +160,7 @@
             </button>
             <div class="pannel">
               <p>
-                Certo! Chiamaci al 051 049 2408 oppure scrivici in DM sulla nostra pagina
+                Certo! Chiamaci al 327 761 2879 oppure scrivici in DM sulla nostra pagina
                 <a href="https://www.instagram.com/malt_and_hops_pub_bologna/" target="_blank" rel="noopener">Instagram</a>.
               </p>
             </div>
@@ -265,6 +265,7 @@
     </script>
   </body>
 </html>
+
 
 
 
